// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AtImagePicker Snap render AtImagePicker -- props className 1`] = `
<view
  class="at-image-picker test"
/>
`;

exports[`AtImagePicker Snap render AtImagePicker -- props customStyle 1`] = `
<view
  class="at-image-picker"
  style="color: red;"
/>
`;

exports[`AtImagePicker Snap render AtImagePicker -- props files 1`] = `
<view
  class="at-image-picker"
>
  <view
    class="at-image-picker__flex-box"
  >
    <view
      class="at-image-picker__flex-item"
    >
      <view
        class="at-image-picker__item"
      >
        <view
          class="at-image-picker__remove-btn"
        />
        <image
          class="at-image-picker__preview-img"
          mode="aspectFill"
          src="https://zos.alipayobjects.com/rmsportal/PZUUCKTRIHWiZSY.jpeg"
        />
      </view>
    </view>
    <view
      class="at-image-picker__flex-item"
    >
      <view
        class="at-image-picker__item"
      >
        <view
          class="at-image-picker__remove-btn"
        />
        <image
          class="at-image-picker__preview-img"
          mode="aspectFill"
          src="https://zos.alipayobjects.com/rmsportal/hqQWgTXdrlmVVYi.jpeg"
        />
      </view>
    </view>
    <view
      class="at-image-picker__flex-item"
    >
      <view
        class="at-image-picker__item"
      >
        <view
          class="at-image-picker__remove-btn"
        />
        <image
          class="at-image-picker__preview-img"
          mode="aspectFill"
          src="https://zos.alipayobjects.com/rmsportal/PZUUCKTRIHWiZSY.jpeg"
        />
      </view>
    </view>
    <view
      class="at-image-picker__flex-item"
    >
      <view
        class="at-image-picker__item"
      >
        <view
          class="at-image-picker__remove-btn"
        />
        <image
          class="at-image-picker__preview-img"
          mode="aspectFill"
          src="https://zos.alipayobjects.com/rmsportal/PZUUCKTRIHWiZSY.jpeg"
        />
      </view>
    </view>
  </view>
  <view
    class="at-image-picker__flex-box"
  >
    <view
      class="at-image-picker__flex-item"
    >
      <view
        class="at-image-picker__item"
      >
        <view
          class="at-image-picker__remove-btn"
        />
        <image
          class="at-image-picker__preview-img"
          mode="aspectFill"
          src="https://zos.alipayobjects.com/rmsportal/PZUUCKTRIHWiZSY.jpeg"
        />
      </view>
    </view>
    <view
      class="at-image-picker__flex-item"
    />
    <view
      class="at-image-picker__flex-item"
    />
    <view
      class="at-image-picker__flex-item"
    />
  </view>
</view>
`;

exports[`AtImagePicker Snap render AtImagePicker -- props length 1`] = `
<view
  class="at-image-picker"
>
  <view
    class="at-image-picker__flex-box"
  >
    <view
      class="at-image-picker__flex-item"
    >
      <view
        class="at-image-picker__item"
      >
        <view
          class="at-image-picker__remove-btn"
        />
        <image
          class="at-image-picker__preview-img"
          mode="aspectFill"
          src="https://zos.alipayobjects.com/rmsportal/PZUUCKTRIHWiZSY.jpeg"
        />
      </view>
    </view>
    <view
      class="at-image-picker__flex-item"
    >
      <view
        class="at-image-picker__item"
      >
        <view
          class="at-image-picker__remove-btn"
        />
        <image
          class="at-image-picker__preview-img"
          mode="aspectFill"
          src="https://zos.alipayobjects.com/rmsportal/hqQWgTXdrlmVVYi.jpeg"
        />
      </view>
    </view>
    <view
      class="at-image-picker__flex-item"
    >
      <view
        class="at-image-picker__item"
      >
        <view
          class="at-image-picker__remove-btn"
        />
        <image
          class="at-image-picker__preview-img"
          mode="aspectFill"
          src="https://zos.alipayobjects.com/rmsportal/PZUUCKTRIHWiZSY.jpeg"
        />
      </view>
    </view>
    <view
      class="at-image-picker__flex-item"
    >
      <view
        class="at-image-picker__item"
      >
        <view
          class="at-image-picker__remove-btn"
        />
        <image
          class="at-image-picker__preview-img"
          mode="aspectFill"
          src="https://zos.alipayobjects.com/rmsportal/PZUUCKTRIHWiZSY.jpeg"
        />
      </view>
    </view>
    <view
      class="at-image-picker__flex-item"
    >
      <view
        class="at-image-picker__item"
      >
        <view
          class="at-image-picker__remove-btn"
        />
        <image
          class="at-image-picker__preview-img"
          mode="aspectFill"
          src="https://zos.alipayobjects.com/rmsportal/PZUUCKTRIHWiZSY.jpeg"
        />
      </view>
    </view>
  </view>
</view>
`;

exports[`AtImagePicker Snap render AtImagePicker -- props mode 1`] = `
<view
  class="at-image-picker"
>
  <view
    class="at-image-picker__flex-box"
  >
    <view
      class="at-image-picker__flex-item"
    >
      <view
        class="at-image-picker__item"
      >
        <view
          class="at-image-picker__remove-btn"
        />
        <image
          class="at-image-picker__preview-img"
          mode="top"
          src="https://zos.alipayobjects.com/rmsportal/PZUUCKTRIHWiZSY.jpeg"
        />
      </view>
    </view>
    <view
      class="at-image-picker__flex-item"
    >
      <view
        class="at-image-picker__item"
      >
        <view
          class="at-image-picker__remove-btn"
        />
        <image
          class="at-image-picker__preview-img"
          mode="top"
          src="https://zos.alipayobjects.com/rmsportal/hqQWgTXdrlmVVYi.jpeg"
        />
      </view>
    </view>
    <view
      class="at-image-picker__flex-item"
    >
      <view
        class="at-image-picker__item"
      >
        <view
          class="at-image-picker__remove-btn"
        />
        <image
          class="at-image-picker__preview-img"
          mode="top"
          src="https://zos.alipayobjects.com/rmsportal/PZUUCKTRIHWiZSY.jpeg"
        />
      </view>
    </view>
    <view
      class="at-image-picker__flex-item"
    >
      <view
        class="at-image-picker__item"
      >
        <view
          class="at-image-picker__remove-btn"
        />
        <image
          class="at-image-picker__preview-img"
          mode="top"
          src="https://zos.alipayobjects.com/rmsportal/PZUUCKTRIHWiZSY.jpeg"
        />
      </view>
    </view>
  </view>
  <view
    class="at-image-picker__flex-box"
  >
    <view
      class="at-image-picker__flex-item"
    >
      <view
        class="at-image-picker__item"
      >
        <view
          class="at-image-picker__remove-btn"
        />
        <image
          class="at-image-picker__preview-img"
          mode="top"
          src="https://zos.alipayobjects.com/rmsportal/PZUUCKTRIHWiZSY.jpeg"
        />
      </view>
    </view>
    <view
      class="at-image-picker__flex-item"
    />
    <view
      class="at-image-picker__flex-item"
    />
    <view
      class="at-image-picker__flex-item"
    />
  </view>
</view>
`;

exports[`AtImagePicker Snap render AtImagePicker -- props multiple 1`] = `
<view
  class="at-image-picker"
>
  <view
    class="at-image-picker__flex-box"
  >
    <view
      class="at-image-picker__flex-item"
    >
      <view
        class="at-image-picker__item"
      >
        <view
          class="at-image-picker__remove-btn"
        />
        <image
          class="at-image-picker__preview-img"
          mode="aspectFill"
          src="https://zos.alipayobjects.com/rmsportal/PZUUCKTRIHWiZSY.jpeg"
        />
      </view>
    </view>
    <view
      class="at-image-picker__flex-item"
    >
      <view
        class="at-image-picker__item"
      >
        <view
          class="at-image-picker__remove-btn"
        />
        <image
          class="at-image-picker__preview-img"
          mode="aspectFill"
          src="https://zos.alipayobjects.com/rmsportal/hqQWgTXdrlmVVYi.jpeg"
        />
      </view>
    </view>
    <view
      class="at-image-picker__flex-item"
    >
      <view
        class="at-image-picker__item"
      >
        <view
          class="at-image-picker__remove-btn"
        />
        <image
          class="at-image-picker__preview-img"
          mode="aspectFill"
          src="https://zos.alipayobjects.com/rmsportal/PZUUCKTRIHWiZSY.jpeg"
        />
      </view>
    </view>
    <view
      class="at-image-picker__flex-item"
    >
      <view
        class="at-image-picker__item"
      >
        <view
          class="at-image-picker__remove-btn"
        />
        <image
          class="at-image-picker__preview-img"
          mode="aspectFill"
          src="https://zos.alipayobjects.com/rmsportal/PZUUCKTRIHWiZSY.jpeg"
        />
      </view>
    </view>
  </view>
  <view
    class="at-image-picker__flex-box"
  >
    <view
      class="at-image-picker__flex-item"
    >
      <view
        class="at-image-picker__item"
      >
        <view
          class="at-image-picker__remove-btn"
        />
        <image
          class="at-image-picker__preview-img"
          mode="aspectFill"
          src="https://zos.alipayobjects.com/rmsportal/PZUUCKTRIHWiZSY.jpeg"
        />
      </view>
    </view>
    <view
      class="at-image-picker__flex-item"
    />
    <view
      class="at-image-picker__flex-item"
    />
    <view
      class="at-image-picker__flex-item"
    />
  </view>
</view>
`;

exports[`AtImagePicker Snap render AtImagePicker -- props showAddBtn 1`] = `
<view
  class="at-image-picker"
>
  <view
    class="at-image-picker__flex-box"
  >
    <view
      class="at-image-picker__flex-item"
    >
      <view
        class="at-image-picker__item"
      >
        <view
          class="at-image-picker__remove-btn"
        />
        <image
          class="at-image-picker__preview-img"
          mode="aspectFill"
          src="https://zos.alipayobjects.com/rmsportal/PZUUCKTRIHWiZSY.jpeg"
        />
      </view>
    </view>
    <view
      class="at-image-picker__flex-item"
    >
      <view
        class="at-image-picker__item"
      >
        <view
          class="at-image-picker__remove-btn"
        />
        <image
          class="at-image-picker__preview-img"
          mode="aspectFill"
          src="https://zos.alipayobjects.com/rmsportal/hqQWgTXdrlmVVYi.jpeg"
        />
      </view>
    </view>
    <view
      class="at-image-picker__flex-item"
    >
      <view
        class="at-image-picker__item"
      >
        <view
          class="at-image-picker__remove-btn"
        />
        <image
          class="at-image-picker__preview-img"
          mode="aspectFill"
          src="https://zos.alipayobjects.com/rmsportal/PZUUCKTRIHWiZSY.jpeg"
        />
      </view>
    </view>
    <view
      class="at-image-picker__flex-item"
    >
      <view
        class="at-image-picker__item"
      >
        <view
          class="at-image-picker__remove-btn"
        />
        <image
          class="at-image-picker__preview-img"
          mode="aspectFill"
          src="https://zos.alipayobjects.com/rmsportal/PZUUCKTRIHWiZSY.jpeg"
        />
      </view>
    </view>
  </view>
  <view
    class="at-image-picker__flex-box"
  >
    <view
      class="at-image-picker__flex-item"
    >
      <view
        class="at-image-picker__item"
      >
        <view
          class="at-image-picker__remove-btn"
        />
        <image
          class="at-image-picker__preview-img"
          mode="aspectFill"
          src="https://zos.alipayobjects.com/rmsportal/PZUUCKTRIHWiZSY.jpeg"
        />
      </view>
    </view>
    <view
      class="at-image-picker__flex-item"
    />
    <view
      class="at-image-picker__flex-item"
    />
    <view
      class="at-image-picker__flex-item"
    />
  </view>
</view>
`;

exports[`AtImagePicker Snap render initial AtImagePicker 1`] = `
<view
  class="at-image-picker"
/>
`;
